simulatron-salt/src/lib/snapshots/simulatron_salt__lexer__tests__char_literal.snap
---
source: src/lib/lexer.rs
expression: output

---
Const `const`
Whitespace ` `
Identifier `FIRST_LETTER`
Whitespace ` `
CharLiteral `'A'`
Newline
Newline
Identifier `halt`
Newline

