simulatron-salt/src/lib/snapshots/simulatron_salt__lexer__tests__instruction_block.snap
---
source: src/lib/lexer.rs
expression: output

---
Identifier `somelabel`
Colon `:`
Newline
Identifier `copy`
Whitespace ` `
Identifier `r0`
Whitespace ` `
IntLiteral `5`
Newline
Identifier `sconvert`
Whitespace ` `
Identifier `f0`
Whitespace ` `
Identifier `r0`
Newline
Identifier `copy`
Whitespace ` `
Identifier `f1`
Whitespace ` `
FloatLiteral `6.0`
Newline
Identifier `add`
Whitespace ` `
Identifier `f0`
Whitespace ` `
Identifier `f1`
Newline

